@@ -559,6 +559,7 @@ GEN     rootmod0(GEN f, GEN p,long flag);
 GEN     FpXQX_FpXQ_mul(GEN P, GEN U, GEN T, GEN p);
 GEN     FpXQX_FpXQXQV_eval(GEN P, GEN V, GEN S, GEN T, GEN p);
 GEN     FpXQX_FpXQXQ_eval(GEN P, GEN x, GEN S, GEN T, GEN p);
+GEN     FpXQX_div_by_X_x(GEN a, GEN x, GEN T, GEN p, GEN *pr);
 GEN     FpXQX_divrem(GEN x, GEN y, GEN T, GEN p, GEN *pr);
 GEN     FpXQX_divrem_Barrett(GEN x, GEN B, GEN S, GEN T, GEN p, GEN *pr);
 GEN     FpXQX_digits(GEN x, GEN B, GEN T, GEN p);
@@ -4001,6 +4002,7 @@ INLINE GEN    FqX_Fp_mul(GEN P, GEN U, GEN T, GEN p);
 INLINE GEN    FqX_Fq_mul(GEN P, GEN U, GEN T, GEN p);
 INLINE GEN    FqX_add(GEN x,GEN y,GEN T,GEN p);
 INLINE GEN    FqX_div(GEN x, GEN y, GEN T, GEN p);
+INLINE GEN    FqX_div_by_X_x(GEN x, GEN y, GEN T, GEN p, GEN *z);
 INLINE GEN    FqX_divrem(GEN x, GEN y, GEN T, GEN p, GEN *z);
 INLINE GEN    FqX_extgcd(GEN P,GEN Q,GEN T,GEN p, GEN *U, GEN *V);
 INLINE GEN    FqX_gcd(GEN P, GEN Q, GEN T, GEN p);
